Add new enchantments
add flex breastplate tooltip
reduce speed modifier
add monument locate recipe
add effect immunity enchantments
fix some enchantments mismatch target
reduce flex breastplate ratio
relax enchanted essence merge restrictions